--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 body {
   display: grid;
   place-items: center;
+  background: url(images/Mobile.png);
 }
 main {
   background: url(images/Mobile.png);
