--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 main {
   background: url(images/Mobile.png);
   width: 375px;
-  height: 812px;
+  height: 100vh;
 }
 .container {
   max-width: 250px;
