--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body {
 }
 main {
   background: url(images/Mobile.png);
-  width: 100vh;
-  max-width: 360px;
-  height: 100vh;
+  width: 375px;
+  height: 812px;
 }
 .container {
   max-width: 250px;
