--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ body {
 body {
   display: grid;
   place-items: center;
-  background: url(images/Mobile.png);
 }
 main {
-  background: url(images/Mobile.png);
-  width: 375px;
-  height: 812px;
+  background: url(images/Mobile.png) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 .container {
   max-width: 250px;
